2006-09-30  Joe Neeman  <joeneeman@gmail.com>

	* lily/source-file.cc (get_line): fix off-by-one error
	and clean up some of the logic

2006-09-29  Joe Neeman  <joeneeman@gmail.com>

	* lily/page-breaking.cc (make_pages): honour the first-page-number
	property

2006-09-27  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): bump version.

2006-09-26  Pal Benko  <benko.pal@gmail.com>

	* scm/parser-clef.scm: add petrucci-f3 and -f4 clefs
	(the latter is the same as petrucci-f which is kept for compatibility)

2006-09-26  Erik Sandberg  <mandolaerik@gmail.com>
	
	* lily/part-combine-iterator.cc: solo1-event -> solo-one-event

2006-09-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/global-context.cc (run_iterator_on_me): break out of loop
	if moment doesn't increase.

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	forced property.

	* lily/accidental.cc (after_line_breaking): read forced property.

	* lily/accidental-engraver.cc (process_acknowledged): set 'forced
	property.

	* input/regression/accidental-forced-tie.ly:  new file.

2006-09-25  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* ly/engraver-init.ly: set ignoreFiguredBassRest in Staff context.

	* lily/figured-bass-engraver.cc: only listen to rest events if
	ignoreFiguredBassRest is not set.

	* scm/define-context-properties.scm
	(all-user-translation-properties): add ignoreFiguredBassRest property

2006-09-24  Joe Neeman  <joeneeman@gmail.com>

	* lily/paper-book.cc (get_system_specs):
	(set_system_penalty): fix breakbefore.
	We used to set a penalty on the system after the break, now we
	set a permission on the system before the break

	* lily/grob-property.cc: add scm debugging hooks into
	property modification

	* lily/context-property.cc:
	* lily/engraver.cc:
	rename make_foo_from_properties to internal_make_foo and
	move it from context-property.cc to a member function of
	Engraver.
	
	* lily/include/lily-guile-macros.hh: